[package]
name = "jfrog_supervisor"
version = "0.1.1"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.9"
tokio = { version = "1", features = ["full"] }
jemallocator = "0"
faststr = { version = "0", features = ["serde"] }
rayon = "1"
sonic-rs = "0"
serde = { version = "1.0", features = ["derive"] }
log = { version = "0" }
dashmap = { version = "6", features = ["inline", "serde", "rayon"] }
lazy_static = "1"
actix-web = "4"
num_cpus = "1"
parking_lot = "0"
futures-util = { version = "0", default-features = false, features = ["std"] }
thiserror = "2"
clap = "4"
hashbrown = { version = "0", features = ["serde", "rayon"] }
reqwest = { version = "0", features = [
    "json",
    "stream",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
    "rustls-tls-native-roots",
    "hickory-dns",
], default-features = false }


knox_libs = { path = "../knox_libs", version = "*", default-features = false, features = [
    "logger",
] }

[build-dependencies]
chrono = "0"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
debug = false
panic = "abort"
